--- a/web/itemsCreate.xhtml
+++ b/web/itemsCreate.xhtml
@@ -9,11 +9,9 @@
     <body>
 
         <ui:composition template="./mainPage.xhtml">
-
             <ui:define name="mainContent">
                 <f:view>
-                    <h3>#{ bundle.ITEM_LABEL_ADD }</h3>
-                    <p:separator />
+                    <p:outputLabel value="#{ bundle.ITEM_LABEL_ADD }" />
                     <h:form enctype="multipart/form-data" >
                         <p:panelGrid id="itemsGrid" columns="3" 
                                      columnClasses="isLeft, isCenter, isRight" >
