--- a/web/mainPage.xhtml
+++ b/web/mainPage.xhtml
@@ -46,7 +46,7 @@
                     <h3> #{ loginBean.currentModule } </h3>                    
                     
                     <p:separator />
-                    
+                    <p:growl id="messages" showDetail="true" showSummary="true" />
                     <ui:insert name="mainContent" class="mainContent" >***</ui:insert>
 
                 </p:layoutUnit>
